codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__single_line_final_answer_hides_working_status_in_transcript_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1061
expression: term.backend().vt100().screen().contents()
---

› count to 1


• 1


› Ask Codex to do anything

  gpt-5.3-codex default · 100% left · /…
