codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_archive_confirmation_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
      Archive this session?
› As  Are you sure? This will archive the current session

  GP
    › 1. No, don't archive  Return to the current session
      2. Yes, archive       Archive this session now

      enter select · esc back
