codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_btw_requests_forked_side_question_while_task_running.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"   BTW starting...                                                              "
