codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_copy_clipboard_error_message.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4513
expression: rendered.clone()
---
■ Failed to copy to clipboard: simulated clipboard failure
